tests/ui/typeck/slow-lhs-suggestion.rs
fn main() {
    1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1 = 1;
    //~^ ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
    //~| ERROR invalid left-hand side of assignment
}
